wp_derive_request_builder/tests/fail/missing_namespace_attr.rs
#[derive(wp_derive_request_builder::WpDerivedRequest, serde::Serialize)]
#[SparseField(crate::SparseUserField)]
enum UsersRequest {
    #[contextual_get(url = "/users", params = &UserListParams, output = Vec<SparseUser>)]
    List,
}

fn main() {}
